--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Restus</groupId>
-  <artifactId>Demo</artifactId>
+  <artifactId>RestDemo</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Demo Maven Webapp</name>
+  <name>RestDemo</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <dependency>
+      <groupId>org.raml</groupId>
+      <artifactId>com.mulesoft.jaxrs.raml.generator</artifactId>
+      <version>1.3.4</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -44,6 +49,11 @@
       <artifactId>joda-time</artifactId>
       <version>2.9.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.21</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
@@ -56,6 +66,38 @@
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <url>http://localhost:8080/manager/text</url>
+          <server>TomcatServer</server>
+          <path>/RestDemo</path>
+        </configuration>
+      </plugin>
+      <plugin>
+        <version>1.3.4</version>
+        <groupId>org.raml.plugins</groupId>
+        <artifactId>jaxrs-raml-maven-plugin</artifactId>
+        <configuration>
+          <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+          <outputFile>${basedir}/src/main/webapp/raml/api.raml</outputFile>
+          <!--<basePackageName>com.mulesoft.jaxrs.raml.annotation.tests</basePackageName>-->
+          <!--<jaxrsVersion>2.0</jaxrsVersion>-->
+          <!--<useJsr303Annotations>false</useJsr303Annotations>-->
+          <!--<jsonMapper>jackson2</jsonMapper>-->
+          <removeOldOutput>true</removeOldOutput>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate-raml</goal>
+            </goals>
+            <phase>test</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
     <finalName>RestDemo</finalName>
